--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         const baseElement = document.querySelector('base');
         if (baseElement && baseElement.href) {
           basePath = new URL(baseElement.href).pathname;
-        } else if (window.location.pathname.includes('/ADHDplanner/')) {
-          basePath = '/ADHDplanner/';
+        } else if (window.location.pathname.includes('/ADHDPlannerWorking/')) {
+          basePath = '/ADHDPlannerWorking/';
         }
         
         // Handle manifest fallback
@@ -40,7 +40,7 @@
                   'manifest.json',
                   `${basePath}manifest.json`,
                   '/manifest.json',
-                  '/ADHDplanner/manifest.json',
+                  '/ADHDPlannerWorking/manifest.json',
                   './manifest.json'
                 ];
                 
@@ -72,10 +72,10 @@
         const fixDuplicatePathsInElements = (selector, attribute) => {
           document.querySelectorAll(selector).forEach(element => {
             const path = element.getAttribute(attribute);
-            if (path && path.includes('/ADHDplanner/ADHDplanner/')) {
+            if (path && path.includes('/ADHDPlannerWorking/ADHDPlannerWorking/')) {
               element.setAttribute(
                 attribute,
-                path.replace('/ADHDplanner/ADHDplanner/', '/ADHDplanner/')
+                path.replace('/ADHDPlannerWorking/ADHDPlannerWorking/', '/ADHDPlannerWorking/')
               );
             }
           });
@@ -93,6 +93,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script> ✅
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
