--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         fixDuplicatePathsInElements('img', 'src');
       });
     </script>
-    <script type="module" crossorigin src="/ADHDplanner/assets/js/main-CsdtPpbY.js"></script>
-    <link rel="stylesheet" crossorigin href="/ADHDplanner/assets/css/main-yrla3_70.css">
-  <link rel="manifest" href="/ADHDplanner/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDplanner/registerSW.js"></script></head>
+    <script type="module" crossorigin src="assets/js/main-CsdtPpbY.js"></script>
+    <link rel="stylesheet" crossorigin href="assets/css/main-yrla3_70.css">
+  <link rel="manifest" href="manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="registerSW.js"></script></head>
   <body>
     <div id="root"></div>
   </body>
