Deploy updates to GitHub Pages [skip ci]

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <base href="/ADHDplanner/" />
+    <base href="/ADHDPlannerWorking/" />
     <link rel="icon" type="image/svg+xml" href="masked-icon.svg" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -91,9 +91,9 @@
         fixDuplicatePathsInElements('img', 'src');
       });
     </script>
-    <script type="module" crossorigin src="assets/js/main-CsdtPpbY.js"></script>
-    <link rel="stylesheet" crossorigin href="assets/css/main-yrla3_70.css">
-  <link rel="manifest" href="manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="registerSW.js"></script></head>
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-CsdtPpbY.js"></script>
+    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-yrla3_70.css">
+  <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
   </body>
