--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <base href="/ADHDplanner/" />
+    <base href="/ADHDPlannerWorking/" />
     <link rel="icon" type="image/svg+xml" href="masked-icon.svg" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
