--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="masked-icon.svg" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="manifest" href="/ADHDPlannerWorking/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4F46E5" />
     <meta name="description" content="A task management and planning app designed for ADHD users" />
@@ -91,9 +91,9 @@
         fixDuplicatePathsInElements('img', 'src');
       });
     </script>
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-CsdtPpbY.js"></script>
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-Bkq8xcUn.js"></script>
     <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-yrla3_70.css">
-  <script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
+  <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
   </body>
