--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- text/html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -90,9 +91,10 @@
         fixDuplicatePathsInElements('img', 'src');
       });
     </script>
-  </head>
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-NYGBgIWJ.js"></script>
+    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-DQtPwqh-.css">
+  <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
