--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADHD Planner</title>
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-B7iozh35.js"></script>
-    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-BWu7-HVM.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-Ncu-cCQt.js"></script>
+    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-CRacJIkG.css">
   <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
