--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADHD Planner</title>
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-C2GeGzkB.js"></script>
-    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-BCu-I0PH.css">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-QsziIS4U.js"></script>
+    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-C8l_UWJX.css">
   <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
