Deploy updates to GitHub Pages [skip ci]

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADHD Planner</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-FOp1Nx50.js"></script>
-    <link rel="stylesheet" crossorigin href="/ADHDPlannerWorking/assets/css/main-CKwJCBP1.css">
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-38e7fa53.js"></script>
+    <link rel="stylesheet" href="/ADHDPlannerWorking/assets/css/index-77dc7435.css">
   <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
