--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/ADHDPlannerWorking/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADHD Planner</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-761ece94.js"></script>
-    <link rel="stylesheet" href="/ADHDPlannerWorking/assets/css/index-5d505008.css">
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-55381163.js"></script>
+    <link rel="stylesheet" href="/ADHDPlannerWorking/assets/css/index-93226051.css">
   <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
