--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" type="image/x-icon" href="/ADHDPlannerWorking/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADHD Planner</title>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-e5d37276.js"></script>
-    <link rel="stylesheet" href="/ADHDPlannerWorking/assets/css/index-07a319ac.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script type="module" crossorigin src="/ADHDPlannerWorking/assets/js/main-a26b7ff9.js"></script>
+    <link rel="stylesheet" href="/ADHDPlannerWorking/assets/css/index-32edeafd.css">
   <link rel="manifest" href="/ADHDPlannerWorking/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/ADHDPlannerWorking/registerSW.js"></script></head>
   <body>
     <div id="root"></div>
