--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/favicon.ico" />
+    <!-- If you use a PWA manifest, keep this: -->
+    <!-- <link rel="manifest" href="/manifest.webmanifest" /> -->
     <title>ADHD Planner</title>
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#8B5CF6" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
+    <!-- This is the ONLY script tag you need. Vite swaps it to hashed assets at build. -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
